--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -183,6 +183,30 @@ footer a:hover {
 
 /*********************************************************/
 
+/* ******* kira card ********* */
+.kira-card{
+  width: 300px;
+  height: 500px;
+  box-shadow: 0px 5px 15px 0px rgba(0,0,0,.3);
+  background-color: #e7e7e7;
+  overflow: hidden;
+  border-radius: 5px;
+}
+.kira-img{
+  background-image: url("../images//kira.jpeg");
+  width: 100%;
+  height: 300px;
+  background-position: center;
+  background-size: cover;
+  transition: .3s all;
+}
+.kira-img:hover{
+  transform: scale(1.1);
+}
+#kira-info{
+  padding: 10px;
+}
+
 /******************************simretB05 card**************************/
 
 .card-cho {
