--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2670,21 +2670,21 @@ button.my-git:hover {
   padding-bottom: 20px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
-h1{
+#name{
   font-family: 'Anton', sans-serif;
    text-align:center;
    font-size:30px;
    color: rgb(102, 102, 255, 0.4);
  }
- p{
+ .text{
    font-family: 'Roboto', sans-serif;
      
  }
- span{
+ .wrap-me{
    color:green;
    ;  
  }
- button{
+ #click-me{
    position:relative;
    left: 70px;
    border-radius: 50px;
@@ -2694,7 +2694,7 @@ h1{
    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
    cursor: pointer;
  }
- button:hover{
+ #click-me:hover{
    background-image: linear-gradient(45deg,#F3904F,#3B4371);
  }
  
