--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2107,7 +2107,7 @@ button.my-git:hover {
 .parker-card {
   width: 100%;
   max-width: 350px;
-  height: 450px;
+  height: 400px;
   border-radius: 100px 0px 100px 0px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   margin: 30px;
@@ -2116,22 +2116,27 @@ button.my-git:hover {
 }
 
 .parker-image {
-  width: 50%;
-  height: 50%;
-  object-fit: contain;
-  background-size: fit-content;
-  background-position: center;
+  width: 20%;
+  height: 20%;
+}
+
+h1 {
+  border-bottom: 5px dotted white;
+  padding: 20px;
 }
 
 .parker-text {
   color: white;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 0 20px 0 20px;
   line-height: 1.5rem;
 }
 
-.parker-border {
-  border: 5px dotted white;
+p {
+  padding: 5px;
+  border-bottom: 1px dotted white;
 }
-
 /***************************** PARKER End ********************************/
