--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2754,3 +2754,48 @@ button.my-git:hover {
     height: 280px;
   }
 /* Luna's card end */
+
+
+/* harshit's card  */
+
+.cardss {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+}
+
+.cardss:hover{
+  transform: translateY(20px);
+  transform: translatex(20px);
+  background-color: rgb(173, 212, 230);
+
+}
+
+.title {
+  color: grey;
+  font-size: 18px;
+}
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+button:hover, a:hover {
+  opacity: 0.7;
+}
