--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3036,6 +3036,9 @@ a:hover {
 /* Ashton's card start*/
 
 .ash-card-body {
+  --text-container-background-color: rgb(221, 221, 221);
+  --text-color: rgb(250, 156, 93);
+
   margin: 0.25em;
   width: 18em;
   height: 30em;
@@ -3071,10 +3074,10 @@ a:hover {
   position: relative;
   right: 18.2em;
   top: 26.75em;
-  background-color: rgb(11, 13, 150);
-  opacity: 72%;
+  background-color: var(--text-container-background-color);
+  opacity: 90%;
   max-height: 12em;
-  border: 0.2em solid rgb(209, 180, 12);
+  border: 0.2em solid var(--text-color);
   border-radius: 30% 30% 8% 8%;
   transition: all 0.3s ease-in;
 }
@@ -3087,20 +3090,19 @@ a:hover {
 .ash-h1 {
   margin: 0.3em 0em 0.5em 0em;
   text-align: center;
-  color: gold;
+  color: var(--text-color);
   text-shadow: 1px 2px 3px black;
-  border-bottom: 0.15em solid gold;
+  border-bottom: 0.15em solid var(--text-color);
   padding-bottom: 0.2em;
 }
 
 .ash-unordered-list {
   margin: 0;
-  color: gold;
-  text-shadow: 1px 2px 3px black;
+  color: var(--text-color);
 }
 
 .ash-link-text {
-  color: gold;
+  color: var(--text-color);
   text-align: center;
 }
 .ash-link-wiki {
