--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2888,7 +2888,7 @@ button.my-git:hover {
 }
 
 
-/* lily's style start */
+/* Sheru's style start */
 .main_sheru_card {
   height: 500px;
   width: 400px;
