--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3295,3 +3295,25 @@ a:hover {
 |--------------------------- Pluto card end ---------------------------|
 |----------------------------------------------------------------------------|
 */
+
+/* Basha's card start -------- */
+.bash-container{
+    max-width: 300px;
+
+
+
+}
+.bash-card{
+    background-color: white;
+    box-shadow: 0px 4px 4px 0px;
+    border-radius: 15px;
+    padding: 8px;
+}
+.img-tiger{
+    height: 456px;
+    width: 100%;
+    border-radius: 15px;
+    object-fit: cover;
+}
+
+/* Basha's card End -------- */
